developed an builder Laptop, and Director